_sass/_layout.scss
  .container {
    grid-template-rows: 7% auto 100px;
    grid-template-columns: 1fr;
    display: grid;
    height: 100vh;
    width: 100%;
    //overflow-x: hidden;
  }

  // header content //

  .site-header {
    background: $background-color;
    grid-column: 1;
    grid-row: 1 / 2;
    position: relative;
    font-family: $index-font-family;
    box-shadow:
      #000000 4px 6px 8px,
      #4d4d4d -4px -4px 8px;
      z-index: 2;
  }

  .show-hide-sidebar {
    display: none;
  }
  
  .trigger{
    position: absolute;
    width: 100%;
    left: 0%;
    display: inline-flex;
    align-items: center;
    height: 100%;
  }

  .nav-buttons{
    position: relative;
    list-style: none;
    padding: 0px 2%;
    width: 25%;
    text-align: center;
  }

  .page-link {
    white-space: nowrap;
    font-size: $small-font-size;
    color: $text-color;
    
    &:not(:last-child) {
      margin-right: 60px;
    }
    &:hover {
      color: #7e8bff;
    }
  }

  .nav-buttons a {
    display: block;
  }

// footer content (in laptop turns into navigation menu) ###//

  .navigation-menu {
    display: grid;
    grid-row: 3 / 4;
    grid-template-columns: 25% 25% 25% 25%;
    grid-template-rows: 50% 50%;
    grid-template-areas: 
      "header header header header"
      "col1 col2 col3 col4";
    color: $text-color;
    background: $background-color;
    box-shadow:
      #000000 4px 4px 8px,
      #4d4d4d -4px -4px 8px;
    text-align: center;
    z-index: 1;
    padding: 10px 0;
    align-items: center;
    -webkit-transition: all 0.5s ease-in-out;
    -moz-transition: all 0.5s ease-in-out;
    -o-transition: all 0.5s ease-in-out;
    transition: all 0.5s ease-in-out;

    br{
      display: none;
    }
  }

  .author-name {
    display: none;
  }

  .author-description, .author-email, .profile-pic, .box {
    display: none;
  }

  .contact-list, .social-media-list {
    grid-column: 1 / 5;
    grid-row: 2 / 3;
  }

  .social-description {
    font-size: $base-font-size;
    grid-column: 1 / 5;
    grid-row: 1 / 2;
    margin-right: $spacing-unit / 3;
    margin-left: $spacing-unit / 3;
    color: $text-color;
    &:hover {
      color: $text-color;
    } 
  }

  #instagram {
    &:hover {
      fill: #f026e6;
    }
  }

  #github {
    &:hover {
      fill: #0d0d0e;
    }
  }

  #youtube {
    &:hover {
      fill: #ff0000;
    }
  }

  #linkedin {
    &:hover {
      fill: #0099ff;
    }
  }

/*  Icons  */
  .social-svg{
    padding-left: 10px;
  }

  .svg-icon {
    width: 25px;
    height: 20px;
    fill: #8f8f8f;
  }

  .facebook-hashtag-button{
    border: none;
    overflow: hidden;
    vertical-align: middle;
  }

  .twitter-share-button{
    vertical-align: middle;
  }

  .IN-widget{
    vertical-align: middle !important;
  }


//### main content ###//

  .main-content {
    width: 100%;
    grid-column: 1 / 3;
    grid-row: 2 / 3;
    -webkit-transition: all 0.5s ease-in-out;
    -moz-transition: all 0.5s ease-in-out;
    -o-transition: all 0.5s ease-in-out;
    transition: all 0.5s ease-in-out;
    //background-color: #1b1b1b;
  }

  .home {
    position: relative;
    min-height: 100vh;
    //background-color: #1b1b1b;
    background-image: url('../img/post1/gif4.gif');
  }

  .home .post{
    padding-bottom: 0;
    padding-top: 0;
    margin-left: 0;
    margin-right: 0;
    padding-right: 0;
    padding-left: 0;
  }

  .post {
    margin-left: 8%;
    margin-right: 8%;
    padding-bottom: $spacing-unit / 8;
    padding-top: $spacing-unit / 8;
  }

  .post-home-title {
    @include relative-font-size(1.8);
    padding-top: $spacing-unit / 2;
    padding-bottom: $spacing-unit / 8;
    text-align: center;
    font-weight: 1000;
    line-height: 1;
    color: $text-color;
    text-shadow:#000e91 0px 0px 24px;
  }
  
  .post-home-subtitle {
    @include relative-font-size(1.2);
    color: $text-color;
    padding: $spacing-unit / 4;
    display: block;
    text-align: center;
    line-height: normal;
  }

// Search box content. Source: https://codepen.io/omarsherifs/pen/KGLYYW

  .searchBox {
    margin-left: $spacing-unit / 4;
    margin-right: $spacing-unit / 4;
    position: relative;
    left: 0%;
    height: 30px;
    border-radius: 30px;
    padding: 10px;
    background-color: $background-color;
    transition: 0.5s;
    box-shadow: 
    0px 0px 0px 0px rgba(54, 54, 54, 0.6), 
    0px 0px 0px 0px rgba(56, 56, 56, 0.6),
    0px 0px 0px 0px #0001, 
    0px 0px 0px 0px #0001, 
    inset -2px -2px 20px 0px rgba(167, 167, 167, 0.6),
    inset -5px -5px 6px 0px rgba(34, 34, 34, 0.6), 
    inset 8px 8px 20px 0px #0003,
    inset 5px 5px 6px 0px #0001;
    &:hover {
      background: #ffffff;
    }
  }

  .searchInput {
    font-weight: 700;
    letter-spacing: 2px;
    border: none;
    background: none;
    outline: none;
    float: left;
    padding-left: 5px;
    font-size: $base-font-size;
    transition: 0.4s;
    line-height: 40px;
    height: 100%;
    width: 85%;
    color: $text-color;
    &:hover{
      color: black;
    }
  }

  input::-webkit-input-placeholder { 
    color: $text-color;
  }

  input:hover::-webkit-input-placeholder {
    color: black;
  }

  input::placeholder {
    color: $text-color;
  }

  input:hover::placeholder {
    color: black;
  }

  .searchButton {
    color: white;
    float: right;
    width: 30px;
    height: 30px;
    border-radius: 50%;
    background: #2f3640;
    display: flex;
    justify-content: center;
    align-items: center;
    transition: 0.4s;
  }

  .searchBox:hover > .searchButton {
    background: white;
    color : #2f3640;
  }

// home content //

  .post-list {
    margin-left: 15px;
    margin-right: 15px;
    list-style: none;
  }
/* ... */

